--- a/CVEHeatMap.ipynb
+++ b/CVEHeatMap.ipynb
@@ -58,6 +58,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Install calplot "
+   ]
+  },
+   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pip install  calplot"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
